# Tabayyan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.ar.md  README.md  REFERENCES.md  RELEASE.md  SECURITY.md  index.html  mkdocs.yml  publish.sh  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
REFERENCES/: index.html
adr/: index.html
adr/0001-normalize-before-detect/: index.html
adr/0002-single-package/: index.html
adr/0003-opt-in-plugin-discovery/: index.html
adr/0004-api-stability-strategy/: index.html
adr/0005-unicode-normalization-philosophy/: index.html
adr/0006-detector-validator-separation/: index.html
api-stability/: index.html
benchmarks/: RECALL.md  RESULTS.md  index.html  perf.py  recall.py  run.py
cli/: index.html
compatibility/: index.html
config/: index.html
detector-guide/: index.html
detectors/: index.html
docs/: api-stability.md  benchmarks.md  cli.md  compatibility.md  config.md  detector-guide.md  detectors.md  faq.md  index.md  middleware.md  plugins.md  presidio.md  showcase.md  threat-model.md
docs/adr/: 0001-normalize-before-detect.md  0002-single-package.md  0003-opt-in-plugin-discovery.md  0004-api-stability-strategy.md  0005-unicode-normalization-philosophy.md  0006-detector-validator-separation.md  README.md
examples/: basic_scan.py  showcase.py  tabayyan_demo.ipynb
faq/: index.html
fuzz/: fuzz_pipeline.py  harness.py  replay.py  scheduled-fuzz.yml.example
fuzz/seeds/: _make_seeds.py  angle_brackets  arabic_indic_digits  bidi_override  fullwidth_digits  iban_like  malformed_utf8  mixed_arabic_latin  newlines_and_tabs  replacement_char  zero_width
middleware/: index.html
playground/: README.md  app.py  requirements.txt  samples.py
playground/static/: app.js  styles.css
playground/templates/: index.html
plugins/: index.html
presidio/: index.html
search/: search_index.json
showcase/: index.html
src/tabayyan/: __init__.py  checksums.py  cli.py  config.py  confusables.py  engine.py  entities.py  homoglyph.py  middleware.py  ndmo.py  normalize.py  providers.py  redaction.py  streaming.py  vault.py
src/tabayyan/detectors/: __init__.py  base.py  domains.py  generic.py  names.py  registry.py  saudi.py
src/tabayyan/integrations/: __init__.py  presidio.py
tests/: synthetic.py  test_checksums.py  test_cli.py  test_cli_domains.py  test_config.py  test_contracts.py  test_cross_validation.py  test_cross_validation_stdnum.py  test_engine.py  test_fuzz_smoke.py  test_generic.py  test_golden_cards.py  test_golden_corpus.py  test_golden_iban.py  test_golden_vectors.py  test_homoglyph.py  test_middleware.py  test_names.py  test_ndmo.py  test_normalize.py  test_plugins.py  test_presidio_integration.py  test_properties.py  test_providers.py  test_public_api.py  test_readme_examples.py  test_recall.py  test_redaction.py  test_saudi.py  test_streaming.py  test_tokenize.py  test_vault.py
tests/golden/: _generate.py  detections.json
threat-model/: index.html
