[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabayyan"
version = "0.7.0"
description = "Saudi-aware PII detection & redaction for LLM pipelines. Local-first, zero telemetry."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Tabayyan contributors" }]
keywords = ["pii", "saudi", "ksa", "llm", "privacy", "pdpl", "ndmo", "redaction", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "build>=1.0", "python-stdnum>=1.19", "cryptography>=42", "hypothesis>=6"]
docs = ["mkdocs-material>=9"]
presidio = ["presidio-analyzer>=2.2"]
crypto = ["cryptography>=42"]

[project.urls]
Homepage = "https://github.com/nasser-gh/tabayyan"
Issues = "https://github.com/nasser-gh/tabayyan/issues"

[project.scripts]
tabayyan = "tabayyan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tabayyan"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"
